# clearui

./: .clang-format  .clangd  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE-APACHE  LICENSE-MIT  MUSTFIXANDADD-clearui.md  Makefile  README.md  ROADMAP.md  clearui.pc.in  compile_commands.json  compile_flags.txt  test_arena  test_counter  test_hello  test_layout  test_rdi_platform  test_vault
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
cmake/: ClearUIConfig.cmake.in
docs/: API.md  MIGRATION.md
examples/: demo.c  vulkan_overlay.c
include/: clearui.h  clearui_overlay_spv.h  clearui_platform.h  clearui_platform_sdl3.h  clearui_rdi.h
shaders/: overlay.frag  overlay.frag.spv  overlay.vert  overlay.vert.spv
specs/001-clearui-core/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-clearui-core/contracts/: README.md  platform-interface.md  public-api.md  rdi-interface.md
specs/002-fix-gitignore/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-arena-alignment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-arena-alignment/contracts/: public-api.md
specs/004-remove-duplicate-draw-buf-max/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-node-last-child/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-refactor-cui-center/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-font-atlas/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-min-max-constraint-clamping/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-dynamic-draw-buffer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-dynamic-draw-buffer/contracts/: config-draw-buffer.md
specs/010-move-scaled-buf-to-context/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-diff-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-review-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-review-fixes/contracts/: public-api-changes.md
specs/013-api-demo-example/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-security-docs-overflow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-security-docs-overflow/contracts/: api-contracts-security.md
specs/015-release-hygiene-0.2.0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-release-hygiene-0.2.0/contracts/: public-header.md
specs/016-text-input-keyboard-0.3.0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-text-input-keyboard-0.3.0/contracts/: text-input-api.md
specs/017-scroll-mouse-0.4.0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-scroll-mouse-0.4.0/contracts/: scroll-hover-api.md
specs/018-test-coverage-0.5.0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-test-coverage-0.5.0/contracts/: test-coverage.md
specs/019-theming-0.6.0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-theming-0.6.0/contracts/: theme-api.md
specs/020-platform-backend-0-7-0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-platform-backend-0-7-0/contracts/: platform-adapter-0.7.md
specs/021-render-driver-0-8-0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-render-driver-0-8-0/contracts/: platform-present-software-0.8.md  rdi-software-0.8.md
specs/022-robustness-limits-0-9-0/: data-model.md  follow-up-t016-leak.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/022-robustness-limits-0-9-0/contracts/: error-callback-0.9.md  utf8-robustness-0.9.md
specs/023-api-polish-0-10-0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/023-api-polish-0-10-0/contracts/: api-freeze-0.10.md  layout-padding-0.10.md  version-string-0.10.md
specs/024-release-1-0-0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/024-release-1-0-0/contracts/: release-1.0.md
src/core/: a11y.c  a11y.h  arena.c  arena.h  context.c  context.h  diff.c  diff.h  draw_cmd.c  draw_cmd.h  frame_alloc.c  frame_alloc.h  node.c  node.h  render.c  render.h  theme.h  utf8.c  utf8.h  vault.c  vault.h  version.c
src/font/: atlas.c  atlas.h  default_font_embed.h
src/layout/: layout.c  layout.h
src/platform/: cui_platform_sdl3.c  cui_platform_stub.c
src/rdi/: clearui_rdi_soft.c
src/widget/: button.c  canvas.c  checkbox.c  icon_button.c  label.c  layout.c  scroll.c  spacer.c  text_input.c
tests/fuzz/: frame_fuzz.c  utf8_fuzz.c  vault_fuzz.c
tests/integration/: test_counter.c  test_hello.c  test_platform_window.c  test_rdi_platform.c  test_scroll_region.c  test_text_input_edit.c
tests/stress/: stress_widgets.c
tests/unit/: test_a11y.c  test_arena.c  test_canvas_draw.c  test_cui_frame_alloc.c  test_diff.c  test_draw_buf.c  test_draw_cmd.c  test_edge_cases.c  test_focus.c  test_font.c  test_frame_alloc.c  test_label_styled.c  test_layout.c  test_rdi_soft.c  test_scale_buf.c  test_scroll.c  test_spacer.c  test_stack.c  test_style_stack.c  test_text_input.c  test_theme.c  test_utf8.c  test_vault.c  test_wrap.c
